sfdx-source/force-app/main/default/objects/DD_Grid_Report_Filter__mdt/DD_Grid_Report_Filter__mdt.object-meta.xml
<CustomObject>
    <label>DD Grid Report Filter</label>
    <pluralLabel>DD Grid Report Filters</pluralLabel>
</CustomObject>