sfdx-source/force-app/main/default/objects/DD_Grid_Report_Filter__mdt/fields/isExpanded__c.field-meta.xml
<CustomField>
    <fullName>isExpanded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isExpanded</label>
    <type>Checkbox</type>
</CustomField>