sfdx-source/force-app/main/default/objects/DD_Grid_Report_Filter__mdt/fields/MultiSelect_Query_Operator__c.field-meta.xml
<CustomField>
    <fullName>MultiSelect_Query_Operator__c</fullName>
    <label>MultiSelect Query Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN</fullName>
                <default>true</default>
                <label>IN</label>
            </value>
            <value>
                <fullName>LIKE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>