sfdx-source/force-app/main/default/objects/DD_Grid_Report_Filter__mdt/fields/MultiSelect_Ref__c.field-meta.xml
<CustomField>
    <fullName>MultiSelect_Ref__c</fullName>
    <label>MultiSelect Ref</label>
    <referenceTo>DD_Multi_Select_Picklist_Master__mdt</referenceTo>
    <relationshipLabel>DD Grid Report Filters</relationshipLabel>
    <relationshipName>DD_Grid_Report_Filters</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>