sfdx-source/force-app/main/default/objects/DD_Grid_Report_Filter__mdt/fields/Number_Date_Has_IS_BLANK_IS_NOT_BLANK__c.field-meta.xml
<CustomField>
    <fullName>Number_Date_Has_IS_BLANK_IS_NOT_BLANK__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Number/Date Has IS BLANK &amp; IS NOT BLANK</label>
    <type>Checkbox</type>
</CustomField>