sfdx-source/force-app/main/default/objects/DD_Grid_Report_Filter__mdt/fields/Query_Field_API_Names__c.field-meta.xml
<CustomField>
    <fullName>Query_Field_API_Names__c</fullName>
    <inlineHelpText>Comma separated fields to query against</inlineHelpText>
    <label>Query Field API Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>