sfdx-source/force-app/main/default/objects/DD_Grid_Report_Filter__mdt/fields/Toggle_Default__c.field-meta.xml
<CustomField>
    <fullName>Toggle_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Toggle Default</label>
    <type>Checkbox</type>
</CustomField>