sfdx-source/force-app/main/default/objects/DD_Grid_Report_Filter__mdt/fields/Toggle_Filter_Required__c.field-meta.xml
<CustomField>
    <fullName>Toggle_Filter_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Force user to provide true/false option for the filter</inlineHelpText>
    <label>Toggle Filter Required</label>
    <type>Checkbox</type>
</CustomField>