sfdx-source/force-app/main/default/objects/DD_Grid_Report_Filter__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MultiSelect Picklist</fullName>
                <default>true</default>
                <label>MultiSelect Picklist</label>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Toggle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>