sfdx-source/force-app/main/default/objects/DD_Grid_Report_Filter__mdt/validationRules/Label_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Label_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL(Type__c,&apos;MultiSelect Picklist&apos;)),
  ISBLANK( Label__c )
)</errorConditionFormula>
    <errorDisplayField>Label__c</errorDisplayField>
    <errorMessage>This field is required for the type selected.</errorMessage>
</ValidationRule>