sfdx-source/force-app/main/default/objects/DD_Grid_Report_Filter__mdt/validationRules/MultiSelect_operator_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>MultiSelect_operator_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Type__c,&apos;MultiSelect Picklist&apos;),
  ISBLANK(  TEXT(MultiSelect_Query_Operator__c)  )
)</errorConditionFormula>
    <errorDisplayField>MultiSelect_Query_Operator__c</errorDisplayField>
    <errorMessage>This field is required for the type selected.</errorMessage>
</ValidationRule>