sfdx-source/force-app/main/default/objects/DD_Grid_Report_Filter__mdt/validationRules/MultiSelect_Ref_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>MultiSelect_Ref_is_required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Type__c,&apos;MultiSelect Picklist&apos;),
  ISBLANK( MultiSelect_Ref__c )
)</errorConditionFormula>
    <errorDisplayField>MultiSelect_Ref__c</errorDisplayField>
    <errorMessage>This field is required for the type selected.</errorMessage>
</ValidationRule>