sfdx-source/force-app/main/default/objects/DD_Grid_Report_Filter__mdt/validationRules/Multiselect_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Multiselect_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL(Type__c,&apos;MultiSelect Picklist&apos;)),
  OR(
    NOT(ISBLANK( MultiSelect_Ref__c)),
    NOT(ISBLANK( Text( MultiSelect_Query_Operator__c )))
  )
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Mutliselect section fields cannot be set for this type.</errorMessage>
</ValidationRule>