sfdx-source/force-app/main/default/objects/DD_Grid_Report_Filter__mdt/validationRules/Number_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL(Type__c,&apos;DateTime&apos;)),
  NOT(ISPICKVAL(Type__c,&apos;Date&apos;)),
  NOT(ISPICKVAL(Type__c,&apos;Number&apos;)),
  NOT(ISPICKVAL(Type__c,&apos;Percent&apos;)),
  Number_Date_Has_IS_BLANK_IS_NOT_BLANK__c
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Number/Date Filter section fields cannot be set for this type.</errorMessage>
</ValidationRule>