sfdx-source/force-app/main/default/objects/DD_Grid_Report_Filter__mdt/validationRules/Toggle_Default.validationRule-meta.xml
<ValidationRule>
    <fullName>Toggle_Default</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   Toggle_Default__c ,
   NOT( Toggle_Filter_Required__c )
)</errorConditionFormula>
    <errorDisplayField>Toggle_Default__c</errorDisplayField>
    <errorMessage>Toggle default can be set only when Toggle Filter is required.</errorMessage>
</ValidationRule>