sfdx-source/force-app/main/default/objects/DD_Grid_Report_Filter__mdt/validationRules/Toggle_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Toggle_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL(Type__c,&apos;Toggle&apos;)),
  OR(Toggle_Default__c , Toggle_Filter_Required__c )
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Toggle section fields can only be set for Type &apos;Toggle&apos;</errorMessage>
</ValidationRule>