sfdx-source/force-app/main/default/objects/DD_Grid_Report_Filter__mdt/listViews/MXP_Supervisor_Report.listView-meta.xml
<ListView>
    <fullName>MXP_Supervisor_Report</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>isActive__c</columns>
    <columns>Type__c</columns>
    <columns>Sequence__c</columns>
    <columns>Label__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent__c</field>
        <operation>equals</operation>
        <value>MXP_Supervisor_Report</value>
    </filters>
    <label>MXP Supervisor Report</label>
    <language>en_US</language>
</ListView>